react-multi-template-master/src/homepage/Components/style.css
body {
  height: 90%;
}
.custom-nav {
  font-size: small;
  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.3);
}

.navbar-brand {
  padding-left: 0 !important;
}
.custom-nav ul.dropdown-menu {
  font-size: small;
}

.custom-divider {
  height: 5px;
  background: linear-gradient(90deg, #00c9ff 0%, #92fe9d 100%);
}

article {
  padding-left: 0 !important;
}
/*
.custom-container {
    height: 250px;
    width: 100%;
    background-color: #ececec;
}
*/
/*
.margin-left{
    margin-left: 220px !important;
}
*/
.main-banner {
  padding-top: 100px;
  padding-bottom: 0 !important;
  padding-left: 0 !important;
  padding-right: 0 !important;
  /*background-image: url(img/banner.jpg);
    background-size: cover;
    color: white;*/
}
.logo {
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0 !important;
  padding-right: 0 !important;
  background-image: url(./img/banner.jpg);
  background-size: cover;
  color: white;
}

.section-bg {
  padding-top: 50px;
  padding-bottom: 50px;
  background-image: url(./img/banner.jpg);
  background-size: cover;
  color: white;
}

.section-bg-2 {
  padding-top: 50px;
  padding-bottom: 50px;
  background-image: url(./img/gredient.png);
  background-size: cover;
  color: white;
}

.custom-section {
  padding-top: 20px;
  padding-bottom: 20px;
}

.custom-section-2 {
  padding-top: 50px;
  padding-bottom: 50px;
}

.feature-holder {
  text-align: center;
  margin-bottom: 25px;
}

.feature-holder h3 {
  font-size: 1.2em;
}

.feature-holder p {
  font-size: 14px;
}

section.features {
  padding-top: 35px;
  padding-bottom: 25px;
  background-color: white;
}

section.online-courses,
.classroom-training,
.reviews-slider,
.page-content {
  padding-top: 35px;
  padding-bottom: 35px;
}

.online-courses-text-widget,
.classroom-courses-text-widget,
.review-text-widget {
  text-align: center;
}

.online-courses-text-widget h2,
.classroom-courses-text-widget h2,
.review-text-widget h2 {
  font-size: 1.3em;
}

.online-courses-text-widget p,
.classroom-courses-text-widget p,
.review-text-widget p {
  font-size: 14px;
}

.card.online-course-card,
.review-text-widget {
  text-align: center;
  margin-bottom: 25px;
}

.online-course-card .card-title {
  font-size: 1.2em;
  line-height: 25px;
}

.online-course-card .card-text {
  font-size: 14px;
}

.classroom-training,
.page-content {
  background-color: white;
}

.reviews-slider {
  background-color: white;
}

.sign-up-form-sidebar .card-title {
  font-size: 1.2em;
}

.sign-up-form-sidebar .card-text {
  font-size: 14px;
}

.course-list-item {
  color: black;
  font-size: small;
  padding-top: 20px;
}

#review-slider-content li .card {
  text-align: center;
}

#review-slider-content li .card img {
  width: 50px;
  margin-bottom: 15px;
}

#review-slider-content li .card .card-title {
  font-size: 18px;
  font-weight: bold;
}

#review-slider-content li .card .star {
  color: orange;
  font-size: 14px;
}

#review-slider-content li .card .card-text {
  font-size: 14px;
}

footer.main-footer {
  background-color: #292929;
  color: white;
  padding-top: 35px;
  padding-bottom: 35px;
}

aside.footer-widget {
  margin-bottom: 25px;
}

aside.footer-widget h5 {
  font-size: 16px;
}

aside.footer-widget ul {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}

aside.footer-widget ul li a {
  text-decoration: none;
  font-size: 14px;
  color: #adadad;
  display: inline-block;
  margin-bottom: 5px;
}

address h2 {
  font-size: 20px;
}

address p {
  font-size: 14px;
}

section.copy {
  padding-top: 15px;
  padding-bottom: 15px;
  background-color: black;
  color: white;
  font-size: 14px;
  text-align: center;
}

section.copy p {
  margin: 0px;
}

.google-map {
  padding-top: 60px;
}

